# winget-mcp

./: .gitignore  Overview of the Current MCP Service Ecosystem.md  README.md
.cursor/: environment.json
.cursor/rules/: project-instantiation.mdc
.devcontainer/: devcontainer.json
memory-bank/: activeContext.md  implementation-plan.md  progress.md  projectbrief.md  reflection-winget-mcp-qa.md  reflection-winget-mcp-server-qa.md  reflection-winget-mcp-server.md  tasks.md
memory-bank/archive/: feature-winget-mcp-server_20250617.md  winget-mcp-server-complete_20250618.md  winget-mcp-server-qa-complete_20250620.md
memory-bank/creative/: creative-dotnet-architecture.md  creative-dotnet-error-handling.md  creative-dotnet-performance.md  creative-dotnet-security.md  creative-error-handling.md  creative-security-model.md  creative-tool-interfaces.md  creative-winget-architecture.md
winget-mcp-dotnet/: README.md
winget-mcp-dotnet/WinGetMcpServer/: Program.cs  WinGetMcpServer.csproj  appsettings.json
winget-mcp-dotnet/WinGetMcpServer/Configuration/: McpServerOptions.cs
winget-mcp-server/: CURSOR_SETUP.md  MCP_INSPECTOR_VALIDATION.md  README.md  cursor-mcp-config.json  generate_cursor_config.py  main.py  pyproject.toml
winget-mcp-server/src/: __init__.py  config.py  server.py  winget_manager.py
winget-mcp-server/src/security/: __init__.py  validator.py
winget-mcp-server/src/tools/: info_tool.py  install_tool.py  list_tool.py  search_tool.py
winget-mcp-server/src/utils/: errors.py
winget-mcp-server/tests/: test_functional.py  test_server.py  test_summary.md
(+9 files in other folders)
