[project]
name = "winget-mcp-server"
version = "0.1.0"
description = "Model Context Protocol server for Windows Package Manager (WinGet)"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mcp[cli]>=1.9.4",
    "pytest>=8.4.1",
]

[project.scripts]
winget-mcp-server = "src.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
